Cleanup & updates to open api
