# openAPI.yml
@@ -3,8 +3,94 @@ info:
   title: Master List Project
   version: 1.0.0
 paths:
+  /user:
+    post:
+      tags:
+        - Auth API
+      summary: Create a new user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserRequest"
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  username:
+                    type: string
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Username and password required
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Username already exists
+        "500":
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Unexpected error
+  /login:
+    post:
+      tags:
+        - Auth API
+      summary: Get token for a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserRequest"
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Username and password required
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Invalid username or password
+        "500":
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Unexpected error
   /:
     post:
+      tags:
+        - Lists API
       summary: Create a new list
       requestBody:
         required: true
@@ -24,21 +110,26 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: Body must contain fields 'name' and 'items'
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Request must come from an authenticated user
         "500":
           description: Unexpected error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: Unexpected error
     get:
-      summary: Get all lists
+      tags:
+        - Lists API
+      summary: Get all lists belonging to the requesting user
       responses:
         "200":
           description: OK
@@ -48,17 +139,24 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/MasterList"
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Request must come from an authenticated user
         "500":
           description: Unexpected error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: Unexpected error
   /{id}:
     get:
+      tags:
+        - Lists API
       summary: Get a list
       parameters:
         - name: id
@@ -79,29 +177,39 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: The id provided must be a string with 24 characters
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+                example: User {username} is not authorized to retrieve object with id {id}
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Request must come from an authenticated user
         "404":
           description: Not found
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: Object with id {id} not found
         "500":
           description: Unexpected error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: Unexpected error
     patch:
+      tags:
+        - Lists API
       summary: Update a list
       parameters:
         - name: id
@@ -122,29 +230,39 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: The id provided must be a string with 24 characters
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+                example: User {username} is not authorized to update object with id {id}
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Request must come from an authenticated user
         "404":
           description: Not found
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: Object with id {id} not found
         "500":
           description: Unexpected error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: Unexpected error
     delete:
+      tags:
+        - Lists API
       summary: Delete a list
       parameters:
         - name: id
@@ -159,36 +277,114 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/MasterList"
+                type: string
+                example: Deleted object with id {id}
         "400":
           description: Bad request
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: The id provided must be a string with 24 characters
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+                example: User {username} is not authorized to update object with id {id}
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Request must come from an authenticated user
         "404":
           description: Not found
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: Object with id {id} not found
         "500":
           description: Unexpected error
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  error:
-                    type: string
+                type: string
+                example: Unexpected error
+  /story/{id}:
+    get:
+      tags:
+        - Story API
+      summary: Get a story about a list
+      parameters:
+        - name: id
+          in: path
+          description: _id of the list
+          required: true
+          schema:
+            type: string
+        - name: mood
+          in: query
+          description: mood of the desired story
+          required: true
+          schema:
+            type: string
+            enum: [happy, sad, scary]
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: string
+        "400":
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                type: string
+                example: You must provide a mood value to get a story from a list
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                type: string
+                example: User {username} is not authorized to generate stories for list with id {id}
+        "403":
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Request must come from an authenticated user
+        "404":
+          description: Not found
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Object with id {id} not found
+        "500":
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Unexpected error
 components:
   schemas:
+    UserRequest:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+      required: [username, password]
     MasterListRequest:
       type: object
       properties:
@@ -215,3 +411,4 @@ components:
           type: string
         modifiedDate:
           type: string
+      required: [name, items]
